Created yet another helper routefor getting script by its id for executions render workaround
